Added new projects, changed hr width

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="indexcss.css"/>
     <link href="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.13.0/devicon.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
     <script src="https://cdn.rawgit.com/michalsnik/aos/2.1.1/dist/aos.js"></script>
     <title>Portfolio</title>
@@ -51,7 +51,7 @@
               <div class="col">
               <h4><i class="bi bi-chevron-right text-center"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
-              <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 21</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 22</i></h4>
               </div>
               <div class="col">
               <h4><i class="bi bi-chevron-right"><b>Status:</b> Student</i></h4>
@@ -103,7 +103,7 @@
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
             <h1> Literatura </h1>
             <h3> <i class="icon-book"></i> </h3>
-            <h4> Pasjonat literatury filozoficznej, science fiction oraz kryminałów</h4>
+            <h4> Pasjonat literatury filozoficznej jak i psychologicznej</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -168,6 +168,20 @@
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Drawing">GITHUB</a>
             </div>
           </div>
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
+            <div class="card-body">
+              <h2 class="card-title">Kompilator</h2>
+              <p class="card-text">Jednoprzebiegowy kompilator napisany dla abstrakcyjnego języka imperatywnego w ramach kursu "Języki formalne i Teoria Translacji". Kompilator został napisany w popularnym <b>C+</b> (C z wykorzystaniem bibliotek z C++)</p>
+              <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/jftt/tree/main/kompilator">GITHUB</a>
+            </div>
+          </div>
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
+            <div class="card-body">
+              <h2 class="card-title">Apliakcja bankowa</h2>
+              < class="card-text">Prosta apliakcja bankowa napisana w ramach kursu "Bezpieczeństwo" z wykorzystaniem języka <b>Pytohn</b> oraz frameworka <b>Flask</b> </p>
+              <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bezpiecze-stwo/tree/master/lista5/bank">GITHUB</a>
+            </div>
+          </div>
         </section>
       </article>
       <hr>
@@ -218,6 +232,14 @@
             <input type="checkbox" />
             <i class="logo-icon devicon-css3-plain-wordmark colored"></i>
           </div>
+          <div class="newdiv col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-go-plain-wordmark colored"></i>
+          </div>
+          <div class="newdiv col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-nodejs-plain-wordmark colored"></i>
+          </div>
         </section>
         <section class="row m-3">
           <div class="newdiv col">
@@ -243,6 +265,14 @@
           <div class="newdiv col">
             <input type="checkbox" />
             <i class="logo-icon devicon-python-plain-wordmark colored"></i>
+          </div>
+          <div class="newdiv col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-flask-plain-wordmark colored"></i>
+          </div>
+          <div class="newdiv col">
+            <input type="checkbox" />
+            <i class="logo-icon devicon-julia-plain-wordmark colored"></i>
           </div>
         </section>
       </article>
