Changes in about me section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,12 @@
         </article>
         <article class="info row">
             <h2 class="display-2 mb-5 text-center"> O mnie </h2>
-              <div class="col">
-              <h4><i class="bi bi-chevron-right text-center"><b>Imię:</b> Radosław</i></h4>
+              <div class="col text-center">
+              <h4><i class="bi bi-chevron-right"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 22</i></h4>
               </div>
-              <div class="col">
+              <div class="col text-center">
               <h4><i class="bi bi-chevron-right"><b>Status:</b> Student</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Uczelnia:</b> Politechnika Wrocławska</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Miejscowość:</b> Żmigrod</i></h4>
@@ -124,14 +124,14 @@
         <section class="row">
           <div class="borders col-sm-2"></div>
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
-            <h1 class="title"> Algorytmika </h1>
-            <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description">Automatyzacja i zwiększenie efektywności pracy z pewnoscią interesują każdą osobę związaną z informatyką</h4>
+            <h1 class="title"> Matematyka </h1>
+            <h3 class="icon"> <i class="icon-book"></i> </h3>
+            <h4 class="description">Żadna nauka nie wzmacnia tak wiary w potęgę umysłu ludzkiego, jak matematyka</h4>
           </div>
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
-            <h1 class="title"> Uczenie maszynowe</h1>
+            <h1 class="title"> Informatyka</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description"> Wspaniałe połączenie algorytmiki z matematyką pozwalające na odkrywanie nowego sposobu na rozwiązywanie codziennych problemów</h4>
+            <h4 class="description">Od tworzenia stron internetowych, po algorytmikę czy pentesting, na sztucznej inteligencji kończąc</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -171,14 +171,14 @@
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Kompilator</h2>
-              <p class="card-text">Jednoprzebiegowy kompilator napisany dla abstrakcyjnego języka imperatywnego w ramach kursu "Języki formalne i Teoria Translacji". Kompilator został napisany w popularnym <b>C+</b> (C z wykorzystaniem bibliotek z C++)</p>
+              <p class="card-text">Jednoprzebiegowy kompilator napisany dla abstrakcyjnego języka imperatywnego w ramach kursu "Języki formalne i Teoria Translacji". Kompilator został napisany w popularnym <b>C+</b> (C++ z wykorzystaniem bibliotek z C)</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/jftt/tree/main/kompilator">GITHUB</a>
             </div>
           </div>
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Apliakcja bankowa</h2>
-              < class="card-text">Prosta apliakcja bankowa napisana w ramach kursu "Bezpieczeństwo" z wykorzystaniem języka <b>Pytohn</b> oraz frameworka <b>Flask</b> </p>
+              <class="card-text"> Prosta apliakcja bankowa napisana w ramach kursu "Bezpieczeństwo" z wykorzystaniem języka <b>Python</b> oraz frameworka <b>Flask</b> </p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bezpiecze-stwo/tree/master/lista5/bank">GITHUB</a>
             </div>
           </div>
