Changed color scheme

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   </head>
   <body data-aos-easing="ease-in-out" data-aos-duration="1000" data-aos-delay="0">
     <main class="container-fluid">
-      <header class="display-1 text-white text-center">
+      <header class="display-1 text-center">
         <article class="row">
           <section class="col">
             <h1 class="display-1">Strona Główna </h1>
@@ -62,7 +62,7 @@
         <hr>
       </header class="row">
         <div class="col-sm-1"></div>
-        <article class=" col-sm-10 timeline text-white" data-aos="fade-up">
+        <article class=" col-sm-10 timeline" data-aos="fade-up">
           <h2 class="display-2 mb-5 text-center"> Oś czasu</h2>
         <section class="my-container right">
           <div class="content">
@@ -278,7 +278,7 @@
       </article>
       <hr>
       <footer id="contact">
-        <h2 class="display-3 text-center mb-4 ">Dane do kontaktu</h2>
+        <h2 class="display-3 text-black text-center mb-4 ">Dane do kontaktu</h2>
         <button class="btn-lg" onclick="clipboardFacebook()"><i class="icon-facebook-squared"></i></button>
         <button class="btn-lg" onclick="clipboardEmail()"><i class="icon-mail"></i></button>
         <button class="btn-lg" onclick="clipboardLinkedIn()"><i class="icon-linkedin-squared"></i></button>
