Changed boldness of titles

--- a/index.html
+++ b/index.html
@@ -42,12 +42,12 @@
       <header class="display-1 text-center">
         <article class="row">
           <section class="col">
-            <h1 class="display-1">Strona Główna </h1>
+            <h1 class="display-1"><b>Strona Główna</b> </h1>
             <hr>
           </section>
         </article>
         <article class="info row">
-            <h2 class="display-2 mb-5 text-center"> O mnie </h2>
+            <h2 class="display-2 mb-5 text-center"> <b>O mnie</b> </h2>
               <div class="col text-center">
               <h4><i class="bi bi-chevron-right"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
@@ -63,7 +63,7 @@
       </header class="row">
         <div class="col-sm-1"></div>
         <article class=" col-sm-10 timeline" data-aos="fade-up">
-          <h2 class="display-2 mb-5 text-center"> Oś czasu</h2>
+          <h2 class="display-2 mb-5 text-center font-weight-bold"><b>Oś czasu</b></h2>
         <section class="my-container right">
           <div class="content">
             <h2>2019-aktualnie</h2>
@@ -92,53 +92,53 @@
       <div class="col-sm-1"></div>
       <hr>
       <article  data-aos="fade-down">
-        <h2 class="display-2 mb-5 text-center"> Zainteresowania</h2>
+        <h2 class="display-2 mb-5 text-center"> <b>Zainteresowania</b></h2>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1> Szachy </h1>
             <h3> <i class="icon-king"></i> </h3>
-            <h4> Początkujący szachista, ulubione otwarcia: Gambit Hetmański i Obrona Francuska</h4>
+            <h4 class="p-2 description"> Początkujący szachista, ulubione otwarcia: Gambit Hetmański i Obrona Francuska</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1> Literatura </h1>
             <h3> <i class="icon-book"></i> </h3>
-            <h4> Pasjonat literatury filozoficznej jak i psychologicznej</h4>
+            <h4 class="p-2 description"> Pasjonat literatury filozoficznej jak i psychologicznej</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1> Sport </h1>
             <h3> <i class="icon-soccer-ball"></i> </h3>
-            <h4> Fan sportów wszelakich z naciskiem na piłkę nożną oraz hokej </h4>
+            <h4 class="p-2 description"> Fan sportów wszelakich z naciskiem na piłkę nożną oraz hokej </h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1> Gry</h1>
             <h3> <i class="icon-gamepad"></i> </h3>
-            <h4>Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
+            <h4 class="p-2 description">Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
         <section class="row">
           <div class="borders col-sm-2"></div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1 class="title"> Matematyka </h1>
             <h3 class="icon"> <i class="icon-book"></i> </h3>
-            <h4 class="description">Żadna nauka nie wzmacnia tak wiary w potęgę umysłu ludzkiego, jak matematyka</h4>
+            <h4 class="description p-2">Żadna nauka nie wzmacnia tak wiary w potęgę umysłu ludzkiego, jak matematyka</h4>
           </div>
-          <div class="borders col-sm-4 text-center text-white bg-dark mb-5">
+          <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h1 class="title"> Informatyka</h1>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description">Od tworzenia stron internetowych, po algorytmikę czy pentesting, na sztucznej inteligencji kończąc</h4>
+            <h4 class="description p-2">Od tworzenia stron internetowych, po algorytmikę czy pentesting, na sztucznej inteligencji kończąc</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
       </article>
       <hr>
       <article class="aos-init aos-animate" data-aos="fade-right">
-        <h2 class="display-2 mb-5 text-center"> Studenckie projekty</h2>
+        <h2 class="display-2 mb-5 text-center"> <b>Studenckie projekty</b></h2>
        <section class="row">
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
@@ -178,7 +178,7 @@
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
               <h2 class="card-title">Apliakcja bankowa</h2>
-              <class="card-text"> Prosta apliakcja bankowa napisana w ramach kursu "Bezpieczeństwo" z wykorzystaniem języka <b>Python</b> oraz frameworka <b>Flask</b> </p>
+              <class="card-text"> Prosta apliakcja bankowa napisana w ramach kursu "Bezpieczeństwo" z wykorzystaniem języka <b>Python</b> oraz frameworka <b>Flask</b>. Aplikacja umożliwia utworzenie konta, dokonywanie przelewów oraz odzyskiwanie utraconego hasła. </p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Bezpiecze-stwo/tree/master/lista5/bank">GITHUB</a>
             </div>
           </div>
@@ -186,7 +186,7 @@
       </article>
       <hr>
       <article data-aos="fade-up">
-        <h2 class="display-2 mb-5 text-center"> Własne projekty</h2>
+        <h2 class="display-2 mb-5 text-center"> <b>Własne projekty</b></h2>
         <section class="row">
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
               <div class="card-body">
@@ -206,7 +206,7 @@
       </article>
       <hr>
       <article class="text-center">
-        <h2 class="display-2 text-center mb-4" >Jezyki i technologie</h2>
+        <h2 class="display-2 text-center mb-4" ><b>Języki i technologie</b></h2>
         <section class="row m-3">
           <div class="newdiv col">
             <input type="checkbox" />
@@ -278,7 +278,7 @@
       </article>
       <hr>
       <footer id="contact">
-        <h2 class="display-3 text-black text-center mb-4 ">Dane do kontaktu</h2>
+        <h2 class="display-3 text-black text-center mb-4 "><b>Dane do kontaktu</b></h2>
         <button class="btn-lg" onclick="clipboardFacebook()"><i class="icon-facebook-squared"></i></button>
         <button class="btn-lg" onclick="clipboardEmail()"><i class="icon-mail"></i></button>
         <button class="btn-lg" onclick="clipboardLinkedIn()"><i class="icon-linkedin-squared"></i></button>
