Branch for chaning languages implementation

--- a/index.html
+++ b/index.html
@@ -19,8 +19,30 @@
       </article>
       <header class="display-1 text-center">
         <article class="row">
+          <section class="col-auto">
+            <div class="row mb-2">
+              <button class="btn language btn-light">Light Mode</button>
+            </div>
+            <div class="row mb-2">
+              <button class="btn language btn-dark">Dark Mode</button>
+            </div>
+            <div class="row mb-2">
+              <button class="btn language btn-light">Polski <img src="source/Poland.png" alt="Flaga Polski"/></button>
+            </div>
+          </section>
           <section class="col">
             <h1 class="display-1"><b>Strona Główna</b> </h1>
+          </section>
+          <section class="col-auto">
+            <div class="row mb-2">
+              <button class="btn language btn-light">English <img src="source/USA.png" alt="Flaga Stanów Zjednoczonych"/></button>
+            </div>
+            <div class="row mb-2">
+              <button class="btn language btn-light">한국어 <img src="source/South-Korea.png" alt="Flaga Korei Południowej"/></button>
+            </div>
+            <div class="row mb-2">
+              <button class="btn language btn-light""> Français <img src="source/France.png" alt="Flaga Francji"/> </button>
+            </div>
           </section>
         </article>
         <hr>
