--- a/index.html
+++ b/index.html
@@ -29,44 +29,53 @@
               <div class="col text-center">
               <h4><i class="bi bi-chevron-right"><b>Imię:</b> Radosław</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Nazwisko:</b> Wojtczak</i></h4>
-              <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 22</i></h4>
-              </div>
-              <div class="col text-center">
-              <h4><i class="bi bi-chevron-right"><b>Status:</b> Student</i></h4>
-              <h4><i class="bi bi-chevron-right"><b>Uczelnia:</b> Politechnika Wrocławska</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Wiek:</b> 25</i></h4>
+              <h4><i class="bi bi-chevron-right"><b>Stanowisko:</b> Młodszy programista</i></h4>
               <h4><i class="bi bi-chevron-right"><b>Miejscowość:</b> Żmigrod/Wrocław</i></h4>
               </div>
         </article>
         <hr>
       </header class="row">
         <div class="col-sm-1"></div>
-        <article class=" col-sm-10 timeline" data-aos="fade-up">
+        <article class="col-sm-10 timeline" data-aos="fade-up">
           <h2 class="display-2 mb-5 text-center font-weight-bold"><b>Oś czasu</b></h2>
-        <section class="my-container right">
-          <div class="content">
-            <h2>2019-aktualnie</h2>
-            <p>Studia na kierunku Informatyka Algorytmiczna, wydziale Podstawowych Problemów Techniki na Politechnice Wrocławskiej</p>
-          </div>
-        </section>
-        <section class="my-container right">
-          <div class="content">
-            <h2>2016-2019</h2>
-            <p>Nauka w liceum nr III im. Adama Mickiewicza we Wrocławiu na profilu matematyczno-fizyczno-informatycznym</p>
-          </div>
-        </section>
-        <section class="my-container right">
-          <div class="content">
-            <h2>2013-2016</h2>
-            <p>Nauka w gimnazjum im. Macieja Rataja w Żmigrodzie</p>
-          </div>
-        </section>
-        <section class="my-container right">
-          <div class="content">
-            <h2>2007-2013</h2>
-            <p>Nauka w szkole podstawowej im. Bolesława Chrobrego w Żmigrodzie</p>
-          </div>
-        </section>
-      </article>
+          <section class="my-container right">
+            <div class="content school">
+              <h2>2023-2024</h2>
+              <p>Studia magisterskie na kierunku Informatyka Algorytmiczna na Wydziale Informatyki i Telekomunikacji na Politechnice Wrocławskiej</p>
+            </div>
+          </section>
+          <section class="my-container left">
+            <div class="content work">
+              <h2>2022-aktualnie</h2>
+              <p>Rozpoczęcie pracy na stanowisku "Młodszy Programista Aplikacji Biznesowych"</p>
+            </div>
+          </section>
+          <section class="my-container right">
+            <div class="content school">
+              <h2>2019-2023</h2>
+              <p>Studia inżynierskie na kierunku Informatyka Algorytmiczna, wydziale Podstawowych Problemów Techniki na Politechnice Wrocławskiej</p>
+            </div>
+          </section>
+          <section class="my-container right">
+            <div class="content school">
+              <h2>2016-2019</h2>
+              <p>Nauka w liceum nr III im. Adama Mickiewicza we Wrocławiu na profilu matematyczno-fizyczno-informatycznym</p>
+            </div>
+          </section>
+          <section class="my-container right">
+            <div class="content school">
+              <h2>2013-2016</h2>
+              <p>Nauka w gimnazjum im. Macieja Rataja w Żmigrodzie</p>
+            </div>
+          </section>
+          <section class="my-container right">
+            <div class="content school">
+              <h2>2007-2013</h2>
+              <p>Nauka w szkole podstawowej im. Bolesława Chrobrego w Żmigrodzie</p>
+            </div>
+          </section>
+        </article>
       <div class="col-sm-1"></div>
       <hr>
       <article  data-aos="fade-down">
@@ -81,7 +90,7 @@
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h2> Literatura </h2>
             <h3> <i class="icon-book"></i> </h3>
-            <h4 class="p-2 description"> Pasjonat literatury filozoficznej jak i psychologicznej</h4>
+            <h4 class="p-2 description"> Miłośnik literatury filozoficznej / psychologicznej - cenię książki, które prowokują do myślenia i kwestionowania schematów.</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -95,7 +104,7 @@
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h2> Gry</h2>
             <h3> <i class="icon-gamepad"></i> </h3>
-            <h4 class="p-2 description">Wieloletni gracz takich tytułów jak League of Legends czy StarCraft2 </h4>
+            <h4 class="p-2 description">Wieloletni gracz takich tytułów jak League of Legends czy Counter Strike </h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -104,12 +113,12 @@
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
             <h2 class="title"> Matematyka </h2>
             <h3 class="icon"> <i class="icon-book"></i> </h3>
-            <h4 class="description p-2">Żadna nauka nie wzmacnia tak wiary w potęgę umysłu ludzkiego, jak matematyka</h4>
+            <h4 class="description p-2">Lubuję się w uniwersalnym języku logiki, dodatkowo dobrze odnajduję się w liczbach</h4>
           </div>
           <div class="borders col-sm-4 text-center text-white bg-dark mb-5 p-3">
-            <h2 class="title"> Informatyka</h2>
+            <h2 class="title"> Sztuczna inteligencja</h2>
             <h3 class="icon"> <i class="icon-laptop"></i> </h3>
-            <h4 class="description p-2">Od tworzenia stron internetowych, po algorytmikę czy pentesting, na sztucznej inteligencji kończąc</h4>
+            <h4 class="description p-2">Eksperymentuję z modelami predykcyjnymi i analizą danych, szczególnie w kontekście sportu</h4>
           </div>
           <div class="borders col-sm-2"></div>
         </section>
@@ -134,7 +143,7 @@
           </div>
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
             <div class="card-body">
-              <h2 class="card-title">Ukladanka</h2>
+              <h2 class="card-title">Układanka</h2>
               <p class="card-text">Prosta strona internetowa, która przy pomocy Javascripta pozwala na ułozenie wybranego zdjecia z puzli! Przesuwaj czerwony kwadrat az otrzymasz z powrotem swoje pierwotne zdjęcie. (Z dokładnoscią do kwadracika)</p>
               <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Puzzle">GITHUB</a>
             </div>
@@ -163,14 +172,34 @@
         </section>
       </article>
       <hr>
+      <article data-aos="fade-left">
+        <h2 class="display-2 mb-5 text-center"> <b>Prace "naukowe"</b></h2>
+        <section class="row">
+          <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
+              <div class="card-body">
+                <h2 class="card-title">Praca inżynierska</h2>
+                <p class="card-text">Praca o tytule "Implementacja programu GRAPHPLAN do planowania akcji z wykorzystaniem programowania ograniczeń" - główna część pracy napisana w PROLOGu, mechanizm generowania grafów napisany w Pythonie </p>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/Inzynierka">GITHUB</a>
+              </div>
+            </div>
+            <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
+              <div class="card-body">
+                <h2 class="card-title">Praca magisterska</h2>
+                <p class="card-text">Praca o prozaicznym, ale dość obrazowym tytule "Przewidywanie zdarzeń w piłce nożnej" - utworzenie systemu predykcyjnego pozwalającego na przewidywania wybranych zdarzeń w meczach piłkarskich</p>
+                <a class="btn btn-success card-link" target="_blank" href=https://github.com/41761707/Praca-magisterska">GITHUB</a>
+              </div>
+            </div>
+          </section>
+      </article>
+      <hr>
       <article data-aos="fade-up">
         <h2 class="display-2 mb-5 text-center"> <b>Własne projekty</b></h2>
         <section class="row">
           <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
               <div class="card-body">
-                <h2 class="card-title">Fantasy LCK</h2>
-                <p class="card-text">Strona internetowa pozwalająca na utworzenie wymarzonego składu złożonego z graczy najlepszej Koreanskiej Ligi w grze League of Legends i rywalizację ze znajomymi w formacie "fantasy"</p>
-                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/FantasyLCK">GITHUB</a>
+                <h2 class="card-title">Ekstrabet</h2>
+                <p class="card-text">Rozszerzenie pracy magisterskiej, której celem jest badanie możliwości predykcji występowania wybranych zdarzeń w meczach sportowych (a w przyszłości może i esportowych?) na więcej zdarzeń, sportów jak i o interfejs graficzny</p>
+                <a class="btn btn-success card-link" target="_blank" href="https://github.com/41761707/EkstraBet">GITHUB</a>
               </div>
             </div>
             <div class="borders col-sm-6 text-center text-white bg-dark mb-5 card">
